# website-content

./: .clang-format  README.md
manim/newtons-fractal/: .gitignore  README.md  data_exporter.py  forked_manim_svg_animations.py  forked_svg.py  manim.cfg  minify-manim-svgs.py  pyproject.toml  scene.py
manim/svg-anim-compiler/: CMakeLists.txt  main.c  notes.txt  todo.txt
manim/svg-anim-compiler/common/include/common/: arena.h  core.h  defs.h
manim/svg-anim-compiler/ctrs/: map.h  map_test.h
manim/svg-anim-compiler/ctrs/include/ctrs/: map.h  map_test.h
manim/svg-anim-compiler/ctrs/test/: map_test.h
manim/svg-anim-compiler/frontends/include/manim/: manim_fe.h
manim/svg-anim-compiler/frontends/src/: manim_fe.c
manim/svg-anim-compiler/ir/include/ir/: gen_ir.h  ir.h
manim/svg-anim-compiler/ir/src/: gen_ir.c
